Bug 718624 - Handle press action on links, expose the URL. r=surkov