accessible/src/mac/mozHTMLAccessible.mm
@@ -42,6 +42,8 @@
 
 #import "nsHyperTextAccessible.h"
 
+#import "nsCocoaUtils.h"
+
 @implementation mozHeadingAccessible
 
 - (id)value
@@ -51,6 +53,81 @@
 
   PRUint32 level = mGeckoAccessible->AsHyperText()->GetLevelInternal();
   return [NSNumber numberWithInt:level];
+}
+
+@end
+
+@interface mozLinkAccessible ()
+-(NSURL*)url;
+@end
+
+@implementation mozLinkAccessible
+
+- (NSArray*)accessibilityAttributeNames
+{
+  // if we're expired, we don't support any attributes.
+  if (mIsExpired)
+    return [NSArray array];
+  
+  static NSMutableArray* attributes = nil;
+  
+  if (!attributes) {
+    attributes = [[super accessibilityAttributeNames] mutableCopy];
+    [attributes addObject:NSAccessibilityURLAttribute];
+  }
+
+  return attributes;
+}
+
+- (id)accessibilityAttributeValue:(NSString *)attribute
+{
+  if ([attribute isEqualToString:NSAccessibilityURLAttribute])
+    return [self url];
+
+  return [super accessibilityAttributeValue:attribute];
+}
+
+- (NSArray*)accessibilityActionNames 
+{
+    // if we're expired, we don't support any attributes.
+  if (mIsExpired)
+    return [NSArray array];
+
+  static NSArray* actionNames = nil;
+
+  if (!actionNames) {
+    actionNames = [[NSArray alloc] initWithObjects:NSAccessibilityPressAction,
+                                   nil];
+  }
+
+  return actionNames;
+}
+
+- (void)accessibilityPerformAction:(NSString*)action 
+{
+  if (!mGeckoAccessible)
+    return;
+
+  if ([action isEqualToString:NSAccessibilityPressAction])
+    mGeckoAccessible->DoAction(0);
+  else
+    [super accessibilityPerformAction:action];
+}
+
+- (NSURL*)url
+{
+  if (!mGeckoAccessible)
+    return nil;
+
+  nsAutoString value;
+  nsresult rv = mGeckoAccessible->GetValue(value);
+  NS_ENSURE_SUCCESS(rv, nil);
+
+  NSString* urlString = value.IsEmpty() ? nil : nsCocoaUtils::ToNSString(value);
+  if (!urlString)
+    return nil;
+
+  return [NSURL URLWithString:urlString];
 }
 
 @end
